# learn-opengl

./: CMakeLists.txt
include/: Exception.cppm  Shader-Exception.cppm  Shader-Types.cppm  Shader.cppm
src/: Shader-Exception.cpp  Shader.cpp  glad.c  main.cpp  test.cpp
